# aganitha-cognitive-solutions-task-

./: PubMed Paper Fetcher.pptx  README.md  pyproject.toml  results.csv
another code formate/pubmed_paper_fetcher using XML/: pubmed_paper_fetcher using XML .ipynb
another code formate/pubmed_paper_fetcher with out poetry/: output.csv  pubmed_paper_fetch with out poetry library .ipynb
pubmed_paper_fetcher/: __init__.py  cli.py  pubmed_paper_fetcher.py
